--- a/SmogWawelski/SmogWawelski/SmogWawelski.csproj
+++ b/SmogWawelski/SmogWawelski/SmogWawelski.csproj
@@ -64,6 +64,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Exceptions\NoInternetConnectionException.cs" />
     <Compile Include="Exceptions\SensorNotFoundException.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
