--- a/SmogWawelski/SmogWawelski/SmogWawelski.csproj
+++ b/SmogWawelski/SmogWawelski/SmogWawelski.csproj
@@ -64,6 +64,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AppCode\DatabaseManger.cs" />
     <Compile Include="Exceptions\NoInternetConnectionException.cs" />
     <Compile Include="Exceptions\SensorNotFoundException.cs" />
     <Page Include="MainWindow.xaml">
@@ -101,6 +102,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="data\SmogWawelskiDb.sqlite" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -115,6 +117,11 @@
       <Project>{dd76e29f-60be-4bab-bb4e-fae11bb6c26a}</Project>
       <Name>Util</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="lib\EntityFramework.dll" />
+    <Content Include="lib\Newtonsoft.Json.dll" />
+    <Content Include="lib\System.Data.SQLite.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
